--- a/res/xml/navigation.xml
+++ b/res/xml/navigation.xml
@@ -20,4 +20,10 @@
     android:layout="@layout/tab_ui"
     android:title="@string/navigation_category" >
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="navigation_bar_show"
+        android:title="@string/navigation_title"
+        android:summary="@string/navigation_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
