Powermenu Torch option [2/2]

--- a/res/xml/powermenu.xml
+++ b/res/xml/powermenu.xml
@@ -66,5 +66,10 @@
             android:title="@string/powermenu_logout"
             android:defaultValue="false" />
 
+         <SwitchPreference
+            android:key="powermenu_torch"
+            android:title="@string/powermenu_torch"
+            android:persistent="false" />
+
 </PreferenceScreen>
 
