--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -21,4 +21,10 @@
     android:layout="@layout/tab_ui"
     android:title="@string/options_category" >
 
+    <com.franken.lab.preference.SecureSettingSwitchPreference
+        android:key="face_auto_unlock"
+        android:title="@string/face_auto_unlock_title"
+        android:summary="@string/face_auto_unlock_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
