LAB: Repurpose SystemUI tuner for LAB [2/2]
Removed dnd options since those are irrelevant in Pie.

thanks aosip for this

Signed-off-by: Dabug123 <clarkbrunswick55@gmail.com>

--- a/res/xml/navigation.xml
+++ b/res/xml/navigation.xml
@@ -26,4 +26,12 @@
         android:summary="@string/navigation_summary"
         android:defaultValue="true" />
 
+    <Preference
+            android:title="@string/navbar_tuner_title"
+            android:summary="@string/navbar_tuner_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.NavBarActivity" />
+    </Preference>
+
 </PreferenceScreen>
