--- a/res/xml/icons.xml
+++ b/res/xml/icons.xml
@@ -21,5 +21,13 @@
     android:layout="@layout/tab_ui"
     android:title="@string/icon_category" >
 
+    <Preference
+            android:title="@string/statusbar_items_title"
+            android:summary="@string/status_bar_tuner_summary">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
+    </Preference>
+
 </PreferenceScreen>
 
