--- a/res/xml/gesture.xml
+++ b/res/xml/gesture.xml
@@ -20,4 +20,14 @@
     android:layout="@layout/tab_ui"
     android:title="@string/gesture_category" >
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_anywhere"
+        android:title="@string/double_tap_sleep_lockscreen"
+        android:defaultValue="true" />
+
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_sleep_gesture_title"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
