Lab: add tuner pref for qs brightness slider position [2/2]
Franken edits-also add more to our qs settings and enable page sliders

Signed-off-by: Dabug123 <clarkbrunswick55@gmail.com>

--- a/res/xml/qs.xml
+++ b/res/xml/qs.xml
@@ -21,4 +21,8 @@
     android:layout="@layout/tab_ui"
     android:title="@string/qs_category" >
 
+    <Preference
+            android:key="qs_settings"
+            android:title="@string/qs_style_category_title"
+            android:fragment="com.franken.lab.quicksettings.QsCategory" />
 </PreferenceScreen>
