--- a/res/xml/lab.xml
+++ b/res/xml/lab.xml
@@ -18,49 +18,49 @@
 
     <PreferenceScreen
        android:key="status_bar"
-       android:fragment="com.franken.lab.statusbar.IconsCategory"
+       android:fragment="com.franken.lab.statusbar.StatusbarHolder"
        android:title="@string/statusbar_bar_title"
        android:summary="@string/statusbar_bar_summary"
        android:icon="@drawable/ic_owlsnest_status_background" />
 
     <PreferenceScreen
        android:key="quicksettings"
-       android:fragment="com.franken.lab.quicksettings.ExpandedCategory"
+       android:fragment="com.franken.lab.quicksettings.QuickSettingsHolder"
        android:title="@string/quicksettings_title"
        android:summary="@string/quicksettings_summary"
        android:icon="@drawable/ic_owlsnest_qs_background" />
 
     <PreferenceScreen
        android:key="notification"
-       android:fragment="com.franken.lab.notification.NotificationCategory"
+       android:fragment="com.franken.lab.notification.NotificationHolder"
        android:title="@string/notification_title"
        android:summary="@string/notification_summary"
        android:icon="@drawable/ic_owlsnest_notif_background"/>
 
     <PreferenceScreen
        android:key="navigation"
-       android:fragment="com.franken.lab.navigation.NavigationCategory"
+       android:fragment="com.franken.lab.navigation.NavigationHolder"
        android:title="@string/navigation_title"
        android:summary="@string/navigation_summary"
        android:icon="@drawable/ic_owlsnest_nav_background" />
 
     <PreferenceScreen
        android:key="buttons"
-       android:fragment="com.franken.lab.buttons.PowermenuCategory"
+       android:fragment="com.franken.lab.buttons.ButtonsHolder"
        android:title="@string/buttons_title"
        android:summary="@string/buttons_summary"
        android:icon="@drawable/ic_owlsnest_buttons_background" />
 
     <PreferenceScreen
        android:key="recent"
-       android:fragment="com.franken.lab.recent.StockRecentCategory"
+       android:fragment="com.franken.lab.recent.RecentHolder"
        android:title="@string/recent_title"
        android:summary="@string/recent_summary"
        android:icon="@drawable/ic_owlsnest_recents_background" />
 
     <PreferenceScreen
        android:key="lockscreen"
-       android:fragment="com.franken.lab.lockscreen.OptionsCategory"
+       android:fragment="com.franken.lab.lockscreen.LockscreenHolder"
        android:title="@string/lockscreen_title"
        android:summary="@string/lockscreen_summary"
        android:icon="@drawable/ic_owlsnest_lockscreen_background" />
@@ -74,7 +74,7 @@
 
     <PreferenceScreen
        android:key="advanced"
-       android:fragment="com.franken.lab.advanced.SystemCategory"
+       android:fragment="com.franken.lab.advanced.AdvancedHolder"
        android:title="@string/advanced_title"
        android:summary="@string/advanced_summary"
        android:icon="@drawable/ic_owlsnest_advanced_background" />
