--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2015-2018 AOSiP
+<!-- Copyright 2018 FrankenRom
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -30,5 +30,26 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+    </string-array>
+
+    <!--- Buttons backlight timeout -->
+    <string-array name="backlight_timeout_entries">
+        <item>@string/backlight_timeout_on</item>
+        <item>@string/backlight_timeout_3s</item>
+        <item>@string/backlight_timeout_default</item>
+        <item>@string/backlight_timeout_10s</item>
+        <item>@string/backlight_timeout_15s</item>
+        <item>@string/backlight_timeout_20s</item>
+        <item>@string/backlight_timeout_30s</item>
+    </string-array>
+
+    <string-array name="backlight_timeout_values">
+        <item>0</item>
+        <item>3000</item>
+        <item>5000</item>
+        <item>10000</item>
+        <item>15000</item>
+        <item>20000</item>
+        <item>30000</item>
     </string-array>
 </resources>
