--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -15,4 +15,12 @@
         android:defaultValue="false"
         android:dependency="qs_show_brightness" />
 
+    <com.franken.lab.preference.CustomSeekBarPreference
+        android:key="qs_panel_bg_alpha"
+        android:title="@string/qs_panel_alpha_title"
+        android:max="255"
+        settings:min="0"
+        settings:units=""
+        android:persistent="false" />
+
 </PreferenceScreen>
