--- a/res/xml/volume.xml
+++ b/res/xml/volume.xml
@@ -21,4 +21,10 @@
     android:layout="@layout/tab_ui"
     android:title="@string/volume_category" >
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:summary="@string/volume_rocker_music_controls_summary"
+        android:title="@string/volume_rocker_music_controls_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
