--- a/res/xml/volume.xml
+++ b/res/xml/volume.xml
@@ -27,4 +27,10 @@
         android:title="@string/volume_rocker_music_controls_title"
         android:defaultValue="false" />
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="volume_rocker_wake"
+        android:summary="@string/volume_rocker_wake_summary"
+        android:title="@string/volume_rocker_wake_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
