--- a/res/xml/powermenu.xml
+++ b/res/xml/powermenu.xml
@@ -21,6 +21,22 @@
     android:layout="@layout/tab_ui"
     android:title="@string/powermenu_category" >
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="torch_long_press_power_gesture"
+        android:title="@string/torch_long_press_power_gesture_title"
+        android:summary="@string/torch_long_press_power_gesture_desc"
+        android:defaultValue="false" />
+
+    <ListPreference
+        android:key="torch_long_press_power_timeout"
+        android:dialogTitle="@string/torch_long_press_power_timeout_title"
+        android:title="@string/torch_long_press_power_timeout_title"
+        android:summary="%s"
+        android:entries="@array/torch_long_press_power_timeout_entries"
+        android:entryValues="@array/torch_long_press_power_timeout_values"
+        android:dependency="torch_long_press_power_gesture"
+        android:persistent="false" />
+
         <com.franken.lab.preference.SystemSettingSwitchPreference
             android:key="powermenu_power"
             android:title="@string/powermenu_power"
