--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -21,4 +21,12 @@
         android:dialogTitle="@string/status_bar_battery_percentage_title"
         android:entries="@array/status_bar_battery_percentage_entries"
         android:entryValues="@array/status_bar_battery_percentage_values" />
+
+    <ListPreference
+        android:key="status_bar_battery_style"
+        android:dialogTitle="@string/status_bar_battery_style_title"
+        android:title="@string/status_bar_battery_style_title"
+        android:entries="@array/entries_status_bar_battery"
+        android:entryValues="@array/values_status_bar_battery" />
+
 </PreferenceScreen>
