--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -154,6 +154,7 @@
     <string-array name="entries_status_bar_battery" translatable="false">
         <item>@string/status_bar_battery_style_port</item>
         <item>@string/status_bar_battery_style_circle</item>
+        <item>@string/battery_style_dotted_circle</item>
         <item>@string/status_bar_battery_style_text</item>
         <item>@string/status_bar_battery_style_hidden</item>
     </string-array>
@@ -162,5 +163,6 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 </resources>
