--- a/res/xml/icons.xml
+++ b/res/xml/icons.xml
@@ -33,5 +33,19 @@
             android:key="battery_settings"
             android:title="@string/battery_style_category_title"
             android:fragment="com.franken.lab.statusbar.StatusBarBattery" />
+
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="network_traffic_state"
+        android:title="@string/network_traffic_state_title"
+        android:summary="@string/network_traffic_state_summary"
+        android:defaultValue="true" />
+
+    <com.franken.lab.preference.CustomSeekBarPreference
+        android:key="network_traffic_autohide_threshold"
+        android:title="@string/network_traffic_autohide_threshold_title"
+        android:max="10"
+        settings:min="0"
+        settings:units="" />
+
 </PreferenceScreen>
 
