--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -23,4 +23,10 @@
         settings:units=""
         android:persistent="false" />
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="qs_footer_warnings"
+        android:title="@string/qs_footer_warnings_title"
+        android:summary="@string/qs_footer_warnings_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
