--- a/res/xml/icons.xml
+++ b/res/xml/icons.xml
@@ -52,6 +52,12 @@
         android:max="10"
         settings:min="0"
         settings:units="" />
+  
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="status_bar_brightness_control"
+        android:title="@string/status_bar_toggle_brightness"
+        android:summary="@string/status_bar_toggle_brightness_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
 
