--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -27,6 +27,12 @@
         android:summary="@string/face_auto_unlock_summary"
         android:defaultValue="false" />
 
+    <com.franken.lab.preference.SecureSettingSwitchPreference
+        android:key="lockscreen_media_metadata"
+        android:title="@string/media_art_title"
+        android:summary="@string/media_art_summary"
+        android:defaultValue="false" />
+
     <SwitchPreference
         android:key="fingerprint_success_vib"
         android:title="@string/fprint_sucess_vib_title"
