--- a/res/xml/icons.xml
+++ b/res/xml/icons.xml
@@ -47,6 +47,12 @@
         android:fragment="com.franken.lab.statusbar.ClockSettings" />
 
     <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="status_bar_logo"
+        android:title="@string/status_bar_logo_title"
+        android:summary="@string/status_bar_logo_summary"
+        android:defaultValue="false"/>
+
+    <com.franken.lab.preference.SystemSettingSwitchPreference
         android:key="network_traffic_state"
         android:title="@string/network_traffic_state_title"
         android:summary="@string/network_traffic_state_summary"
