--- a/res/xml/gesture.xml
+++ b/res/xml/gesture.xml
@@ -36,4 +36,10 @@
 
     </PreferenceCategory>
 
+    <com.franken.lab.preference.SystemSettingSwitchPreference
+        android:key="three_finger_gesture" 
+        android:title="@string/three_finger_gesture" 
+        android:summary="@string/three_finger_gesture_summary" 
+        android:defaultValue="false" /> 
+
 </PreferenceScreen>
