--- a/res/xml/stock_recent.xml
+++ b/res/xml/stock_recent.xml
@@ -35,5 +35,15 @@
         android:defaultValue="3"
         android:dependency="show_clear_all_recents" />
 
+    <Preference
+        android:key="hide_app_from_recents"
+        android:title="@string/hide_apps_from_recents_title"
+        android:summary="@string/hide_apps_from_recents_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.franken.lab.recent.HAFRAppListActivity" />
+    </Preference>
+
+
 </PreferenceScreen>
 
