--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -32,6 +32,12 @@
         android:title="@string/media_art_title"
         android:summary="@string/media_art_summary"
         android:defaultValue="false" />
+    
+    <com.franken.lab.preference.SecureSettingSwitchPreference
+        android:key="lockscreen_pin_ripple"
+        android:title="@string/lockscreen_pin_ripple_title"
+        android:summary="@string/lockscreen_pin_ripple_summary"
+        android:defaultValue="false" />
 
     <SwitchPreference
         android:key="fingerprint_success_vib"
