--- a/res/xml/batterybar_settings.xml
+++ b/res/xml/batterybar_settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018 FrankenRom
+     Copyright (C) 2018 The FrankenRom
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -22,12 +22,6 @@
         android:entries="@array/battery_bar_entries"
         android:entryValues="@array/battery_bar_values" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="battery_bar_color"
-        android:title="@string/battery_bar_color"
-        android:defaultValue="0xffffffff"
-        android:dialogTitle="@string/battery_bar_color" />
-
     <ListPreference
         android:key="battery_bar_style"
         android:title="@string/battery_bar_style_title"
@@ -41,9 +35,28 @@
         android:entries="@array/battery_bar_thickness_entries"
         android:entryValues="@array/battery_bar_thickness_values" />
 
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_color"
+        android:title="@string/battery_bar_color"
+        android:defaultValue="0xffffffff"
+        android:dialogTitle="@string/battery_bar_color" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_charging_color"
+        android:title="@string/battery_bar_charging_color"
+        android:defaultValue="0xFF00FF00"
+        android:dialogTitle="@string/battery_bar_color" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="battery_bar_battery_low_color"
+        android:title="@string/battery_bar_battery_low_color"
+        android:defaultValue="0xFFFF6600"
+        android:dialogTitle="@string/battery_bar_color" />
+
     <SwitchPreference
         android:key="battery_bar_animate"
         android:title="@string/battery_bar_animate_title"
         android:summary="@string/battery_bar_animate_summary" />
 
 </PreferenceScreen>
+
