--- a/res/xml/options.xml
+++ b/res/xml/options.xml
@@ -44,6 +44,12 @@
         android:title="@string/fprint_sucess_vib_title"
         android:summary="@string/fprint_sucess_vib_summary"
         android:persistent="false" />
+
+    <com.franken.lab.preference.SecureSettingSwitchPreference
+        android:key="lockscreen_power_menu_disabled"
+        android:title="@string/lockscreen_power_menu_disabled_title"
+        android:summary="@string/lockscreen_power_menu_disabled_summary"
+        android:defaultValue="true" />
   
     <Preference
             android:title="@string/lockscreen_tuner_title" >
