--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -27,4 +27,9 @@
         android:summary="@string/keyboard_summary"
         android:fragment="com.franken.lab.advanced.KeyboardSettings" />
 
+    <Preference
+        android:key="smart_pixels"
+        android:title="@string/smart_pixels_title"
+        android:fragment="com.franken.lab.advanced.SmartPixels" />
+
 </PreferenceScreen>
