--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -42,6 +42,18 @@
         <attr name="pstsTextSelectedAlpha" format="float" />
     </declare-styleable>
 
+
+    <declare-styleable name="SeekBarPreference">
+        <!-- preference -->
+        <attr name="unitsLeft" format="string|reference" />
+        <attr name="unitsRight" format="string|reference" />
+        <attr name="interval" format="integer" />
+        <!-- style -->
+        <attr name="thumb_default_value_color" format="color" />
+        <attr name="value_popup_view_fg" format="color" />
+        <attr name="value_popup_view_bg" format="color" />
+    </declare-styleable>
+
     <!-- Base attributes available to CustomSeekBarPreference. -->
     <declare-styleable name="CustomSeekBarPreference">
         <attr name="interval" format="integer" />
