--- a/res/xml/animation_settings.xml
+++ b/res/xml/animation_settings.xml
@@ -17,7 +17,7 @@
     android:title="@string/animation_title">
 
     <PreferenceCategory
-        android:key="system_animation"
+        android:key="system_animations"
         android:title="@string/system_animation_title" >
  
          <com.franken.lab.preference.SystemSettingSwitchPreference
@@ -31,7 +31,6 @@
             android:title="@string/animation_duration_title"
             android:max="400"
             android:min="0"
-            liquid:interval="10"
             android:defaultValue="0"
             android:persistent="false" />
 
@@ -82,7 +81,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="listview_animation"
+        android:key="listview_animations"
         android:title="@string/listview_animation_title" >
 
         <ListPreference
@@ -103,7 +102,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="misc_animation"
+        android:key="misc_animations"
         android:title="@string/misc_animation_title" >
  
         <ListPreference 
@@ -123,7 +122,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="tiles_animation"
+        android:key="tiles_animations"
         android:title="@string/tiles_animation_title" >
  
     </PreferenceCategory>
