--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -3,23 +3,23 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <com.franken.lab.preference.SecureSettingSwitchPreference
-        android:key="qs_show_brightness"
-        android:title="@string/qs_show_brightness_title"
-        android:summary="@string/qs_show_brightness_summary"
+        android:key="qs_show_brightness_slider"
+        android:title="@string/brightness_slider_title"
+        android:summary="@string/brightness_slider_summary"
         android:defaultValue="true" />
 
     <com.franken.lab.preference.SecureSettingSwitchPreference
         android:key="qs_brightness_position_bottom"
         android:title="@string/qs_brightness_position_bottom_title"
         android:summary="@string/qs_brightness_position_bottom_summary"
-        android:defaultValue="false"
-        android:dependency="qs_show_brightness" />
+        android:dependency="qs_show_brightness_slider"
+        android:defaultValue="false" />
 
     <com.franken.lab.preference.SystemSettingSwitchPreference
         android:key="qs_show_brightness_icon"
         android:title="@string/brightness_icon_title"
         android:summary="@string/brightness_icon_summary"
-        android:dependency="qs_show_brightness"
+        android:dependency="qs_show_brightness_slider"
         android:defaultValue="false" />
 
     <com.franken.lab.preference.CustomSeekBarPreference
